@@ -34,6 +34,10 @@ mdds 0.9.0
   * added static block type identifier so that the numeric block type
     ID can be deduced from the block type directly.
 
+  * value_type (which is a type of object returned when dereferencing
+    an iterator) now stores 'position' which is the logical position
+    of the first element of a block.
+
 mdds 0.8.1
 
 * multi_type_vector
